--- a/print.html
+++ b/print.html
@@ -58,6 +58,12 @@
 </ul>
 	
 	<div id="gallery" style="display:none;">
+		
+		<img alt="Latte Art"
+		     src="latte_art.jpg"
+		     data-image="latte_art.jpg"
+		     data-description="Made with Photoshop"
+		     style="display:none">
 
 		<img alt="San Diego Map at a Glance"
 		     src="sandiego_map.png"
