new photoshop added

--- a/print.html
+++ b/print.html
@@ -59,6 +59,12 @@
 	
 	<div id="gallery" style="display:none;">
 		
+		<img alt="Rustic Wedding Ad"
+		     src="color_adjustment_after.jpg"
+		     data-image="color_adjustment_after.jpg"
+		     data-description="Made with Photoshop"
+		     style="display:none">
+		     
 		<img alt="Latte Art"
 		     src="latte_art.jpg"
 		     data-image="latte_art.jpg"
