--- a/contact.html
+++ b/contact.html
@@ -53,14 +53,9 @@
 
 <h4 id="contactme">If you have any question, feel free to contact me!</h4>
 <form align="center" action="mailto:asakosp0330@gmail.com">
-  <p>*Name:</p>
-  <input type="text" name="name">
-  <p>*E-mail:</p>
-  <input type="text" name="e-mail">
-  <p>*Message:</p>
-  <textarea type="text" name="message"></textarea><br>
   <br>
-  <input id="submit" type="submit" value="Submit">
+  <br>
+  <input id="submit" type="submit" value="Ask a question!">
 </form>
 
 </body>
