Updated submit button

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,9 @@
 <form align="center" action="mailto:asakosp0330@gmail.com">
   <br>
   <br>
-  <input id="submit" type="submit" value="Ask a question!">
+  <input id="submit" type="submit" value="Send an E-mail">
+  <br>
+  <br>
 </form>
 
 </body>
