--- a/print.html
+++ b/print.html
@@ -59,6 +59,12 @@
 	
 	<div id="gallery" style="display:none;">
 		
+		<img alt="Thank You Card"
+		     src="Thank_You_Card.png"
+		     data-image="Thank_You_Card.png"
+		     data-description="Made with Illustrator"
+		     style="display:none">
+		     
 		<img alt="Rustic Wedding Ad"
 		     src="color_adjustment_after.jpg"
 		     data-image="color_adjustment_after.jpg"
