--- a/about.html
+++ b/about.html
@@ -56,11 +56,14 @@
 <h4 id="bio">
 <p>I am a graphic, multimedia, and web designer based in San Diego.</p>
 <p id="imcp">Just finished my training for <a href="imcp.html"><strong>Interactive Media! (IMCP) </strong></a></p>
-<p>I have a storong passion in designing anything especially in Web Design.</p>
+<p>I have a storong passion in designing anything!</p>
 <p>when I'm not working on designing, I love hiking, music, and drinking with delicious food!</p>
-</h4>
 
 <br>
+
+<p>Check out my <a href="https://www.threadless.com/@hempflower">artist shop</a> on threadless!</p>
+
+</h4>
 
 <h3>Skills:</h3>
 
