--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
 <br>
 
-<p>Check out my <a href="https://www.threadless.com/@hempflower" "a:link=none">artist shop</a> on threadless!</p>
+<p id="imcp">Check out my <a href="https://www.threadless.com/@hempflower">artist shop</a> on threadless!</p>
 
 </h4>
 
