new design added

--- a/print.html
+++ b/print.html
@@ -59,6 +59,12 @@
 	
 	<div id="gallery" style="display:none;">
 		
+	        <img alt="Mystical Challenge on threadless"
+		     src="Challenge_Mystical.jpg"
+		     data-image="Challenge_Mystical.jpg"
+		     data-description="Made with Illustrator and Photoshop"
+		     style="display:none">
+		
 		<img alt="Thank You Card"
 		     src="Thank_You_Card.png"
 		     data-image="Thank_You_Card.png"
