new design added

--- a/print.html
+++ b/print.html
@@ -59,6 +59,12 @@
 	
 	<div id="gallery" style="display:none;">
 		
+		<img alt="Threadless Grunge Design"
+		     src="Threadless_Challenge_Grundge.jpg"
+		     data-image="Threadless_Challenge_Grundge.jpg"
+		     data-description="Made with Photoshop"
+		     style="display:none">
+		     
 	        <img alt="Mystical Challenge on threadless"
 		     src="Challenge_Mystical.jpg"
 		     data-image="Challenge_Mystical.jpg"
