--- a/print.html
+++ b/print.html
@@ -59,6 +59,12 @@
 	
 	<div id="gallery" style="display:none;">
 		
+		<img alt="Logo for Levitt Ekman"
+		     src="LevittEkman_Logo_A-5.png"
+		     data-image="LevittEkman_Logo_A-5.png"
+		     data-description="Made with Illustrator"
+		     style="display:none">
+		
 		<img alt="Threadless Grunge Design"
 		     src="Threadless_Challenge_Grundge.jpg"
 		     data-image="Threadless_Challenge_Grundge.jpg"
