Levitt Ekman Thumb Changed

--- a/print.html
+++ b/print.html
@@ -61,7 +61,7 @@
 		
 		<img alt="Logo for Levitt Ekman"
 		     src="LevittEkman_Logo_A-5.png"
-		     data-image="LevittEkman_Logo_A-5.png"
+		     data-image="LevittEkman_Logo_A-5_LogoOnly.png"
 		     data-description="Made with Illustrator"
 		     style="display:none">
 		
