Levitt Ekman Thumb Fixed

--- a/print.html
+++ b/print.html
@@ -60,8 +60,8 @@
 	<div id="gallery" style="display:none;">
 		
 		<img alt="Logo for Levitt Ekman"
-		     src="LevittEkman_Logo_A-5.png"
-		     data-image="LevittEkman_Logo_A-5_LogoOnly.png"
+		     src="LevittEkman_Logo_A-5_LogoOnly.png"
+		     data-image="LevittEkman_Logo_A-5.png"
 		     data-description="Made with Illustrator"
 		     style="display:none">
 		
