--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 <h2>Hello!</h2>
 <h4 id="bio">
 <p>I am a graphic, multimedia, and web designer based in San Diego.</p>
-<p id="imcp">Just finished my training for <a href="imcp.html"><strong>Interactive Media! (IMCP) </strong></a></p>
-<p>I have a storong passion in designing anything!</p>
+<p>I have a strong passion in designing anything.</p>
+<p>I'd love to use my expertise in a <a href="https://en.wikipedia.org/wiki/Social_enterprise">Social Enterprise</a> field, that has been my dream job!
 <p>when I'm not working on designing, I love hiking, music, and drinking with delicious food!</p>
 
 <br>
