About me updated

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 <h4 id="bio">
 <p>I am a graphic, multimedia, and web designer based in San Diego.</p>
 <p>I have a strong passion in designing anything.</p>
-<p>I'd love to use my expertise in a <a href="https://en.wikipedia.org/wiki/Social_enterprise">Social Enterprise</a> field, that has been my dream job!
+	<p>I'd love to use my expertise in a Social Enterprise field, that has been my dream job!</p>
 <p>when I'm not working on designing, I love hiking, music, and drinking with delicious food!</p>
 
 <br>
