--- a/print.html
+++ b/print.html
@@ -59,6 +59,12 @@
 	
 	<div id="gallery" style="display:none;">
 		
+		<img alt="Logo for Crystal Clair Moon"
+		     src="Logo_A-2.png"
+		     data-image="Logo_A-2.png"
+		     data-description="Made with Illustrator"
+		     style="display:none">
+		
 		<img alt="Logo for Levitt Ekman"
 		     src="LevittEkman_Logo_A-5_LogoOnly.png"
 		     data-image="LevittEkman_Logo_FINAL.png"
